--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
 {
   "pages":[
-    "pages/index/index",
-    "pages/share/index"
+    "pages/index/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
